@@ -100,5 +100,17 @@
 	"buttons/uparrow-button"
 }
 
+{_GUI_DEFINITION
+	"left_arrow"
+	"Left arrow button for a scrollbar."
+	"buttons/left_arrow-button"
+}
+
+{_GUI_DEFINITION
+	"right_arrow"
+	"Right arrow button for a scrollbar."
+	"buttons/right_arrow-button"
+}
+
 #undef _GUI_DEFINITION
 #undef _GUI_RESOLUTION
